feat: 增加 React Fiber 的设计理念

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -369,6 +369,59 @@ function workLoopConcurrent() {
 
 **Renderer（渲染器）**：Renderer 根据 Reconciler 为虚拟 DOM 打的标记，同步执行对应的 DOM 操作。
 
+#### React Fiber 的设计理念
+
+可以把 `React Fiber` 理解为 React 内部实现的一套状态更新机制。支持任务的不同优先级，可中断和恢复，并且能在恢复后可以调用之前的中间状态。
+
+其中每个虚拟 Dom 的更新单元就是一个 Fiber 节点，每个 Fiber 节点对应一个 React element，保存了该组件的类型（函数组件/类组件/原生组件...）、对应的 DOM 节点等信息。可以从这里看到所有[Fiber 节点的属性定义](https://github.com/facebook/react/blob/1fb18e22ae66fdb1dc127347e169e73948778e5a/packages/react-reconciler/src/ReactFiber.new.js#L117)。
+
+##### Fiber 🌲🌲
+
+每个 Fiber 节点有个对应的 React element，多个 Fiber 节点是如何连接形成树呢？靠如下三个属性：
+
+```javascript
+// 指向父级Fiber节点
+this.return = null;
+// 指向子Fiber节点
+this.child = null;
+// 指向右边第一个兄弟Fiber节点
+this.sibling = null;
+```
+
+举个例子，如下的组件结构，对应的 fiber 树为下图：
+
+```javascript
+function App() {
+  return (
+    <div>
+      i am
+      <span>KaSong</span>
+    </div>
+  );
+}
+```
+
+![](./../resource/interview_reactFiber.jpeg)
+
+> 这里需要提一下，为什么父级指针叫做 return 而不是 parent 或者 father 呢？因为作为一个工作单元，return 指节点执行完 completeWork 后会返回的下一个节点。子 Fiber 节点及其兄弟节点完成工作后会返回其父级节点，所以用 return 指代父级节点。
+
+##### 双缓存
+
+当我们用 canvas 绘制动画，每一帧绘制前都会调用 ctx.clearRect 清除上一帧的画面。如果当前帧画面计算量比较大，导致清除上一帧画面到绘制当前帧画面之间有较长间隙，就会出现白屏。为了解决这个问题，我们可以在内存中绘制当前帧动画，绘制完毕后直接用当前帧替换上一帧画面，由于省去了两帧替换间的计算时间，不会出现从白屏到出现画面的闪烁情况。这种在内存中构建并直接替换的技术叫做[双缓存](https://baike.baidu.com/item/双缓冲)。
+
+React 使用“双缓存”来完成 Fiber 树的构建与替换——对应着 DOM 树的**创建**与**更新**。在 React 中最多会同时存在两棵 Fiber 树。当前屏幕上显示内容对应的 Fiber 树称为 current Fiber 树，正在内存中构建的 Fiber 树称为 workInProgress Fiber 树。
+
+current Fiber 树中的 Fiber 节点被称为 current fiber，workInProgress Fiber 树中的 Fiber 节点被称为 workInProgress fiber，他们通过 alternate 属性连接。
+
+```javascript
+currentFiber.alternate === workInProgressFiber;
+workInProgressFiber.alternate === currentFiber;
+```
+
+即当 workInProgress Fiber 树构建完成交给 Renderer 渲染在页面上后，应用根节点的 current 指针指向 workInProgress Fiber 树，此时 workInProgress Fiber 树就变为 current Fiber 树。每次状态更新都会产生新的 workInProgress Fiber 树，通过 current 与 workInProgress 的替换，完成 DOM 更新。
+
+#
+
 #### 说说对 SSR 的了解
 
 `SSR` 也就是服务端渲染，也就是将 `Vue` 在客户端把标签渲染成 `HTML` 的工作放在服务端完成，然后再把 `html` 直接返回给客户端
@@ -410,3 +463,7 @@ function workLoopConcurrent() {
 - 支持自定义渲染器，从而使得 `weex` 可以通过自定义渲染器的方式来扩展，而不是直接 `fork` 源码来改的方式。
 - 支持 `Fragment`（多个根节点）和 `Protal`（在 dom 其他部分渲染组建内容）组件，针对一些特殊的场景做了处理。
 - 基于 `tree shaking` 优化，提供了更多的内置功能。
+
+```
+
+```
