feat: 增加 React diff 介绍

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -319,6 +319,293 @@ React 和 Vue 做的假设是：
 
 但是 React 认为，前端碰到上面的第一种情况概率很小，第二种情况又可以通过提示用户，让用户去解决，因此这个取舍是值得的。没有牺牲空间复杂度，却换来了在大多数情况下时间上的巨大提升。
 
+### React diff 介绍:checkered_flag:
+
+React Diff 的入口函数是 reconcileChildFibers 出发的，该函数会根据 newChild（即 JSX 对象）类型调用不同的处理函数。
+
+你可以从[这里](https://github.com/facebook/react/blob/1fb18e22ae66fdb1dc127347e169e73948778e5a/packages/react-reconciler/src/ReactChildFiber.new.js#L1280)看到 reconcileChildFibers 的源码。
+
+```javascript
+// 根据newChild类型选择不同diff函数处理
+function reconcileChildFibers(
+  returnFiber: Fiber,
+  currentFirstChild: Fiber | null,
+  newChild: any
+): Fiber | null {
+  const isObject = typeof newChild === "object" && newChild !== null;
+
+  if (isObject) {
+    // object类型，可能是 REACT_ELEMENT_TYPE 或 REACT_PORTAL_TYPE
+    switch (newChild.$$typeof) {
+      case REACT_ELEMENT_TYPE:
+      // 单节点 diff，调用 reconcileSingleElement 处理
+      // // ...省略其他case
+    }
+  }
+
+  if (typeof newChild === "string" || typeof newChild === "number") {
+    // 调用 reconcileSingleTextNode 处理
+    // ...省略
+  }
+
+  if (isArray(newChild)) {
+    // 多节点 diff，调用 reconcileChildrenArray 处理
+    // ...省略
+  }
+
+  // 一些其他情况调用处理函数
+  // ...省略
+
+  // 以上都没有命中，删除节点
+  return deleteRemainingChildren(returnFiber, currentFirstChild);
+}
+```
+
+我们可以从同级的节点数量将 Diff 分为两类：
+
+- **单节点 diff**： 当 newChild 类型为 object、number、string，代表同级只有一个节点
+
+- **多节点 diff**：当 newChild 类型为 Array，同级有多个节点
+
+#### 单节点 diff
+
+对于单个节点，我们以类型 object 为例，会进入 reconcileSingleElement。这个函数会做如下事情：
+
+![](./../resource/interview_reactSingleDiff.png)
+
+让我们看看第二步**判断 DOM 节点是否可以复用**是如何实现的。
+
+```javascript
+function reconcileSingleElement(
+  returnFiber: Fiber,
+  currentFirstChild: Fiber | null,
+  element: ReactElement
+): Fiber {
+  const key = element.key;
+  let child = currentFirstChild;
+
+  // 首先判断是否存在对应DOM节点
+  while (child !== null) {
+    // 上一次更新存在DOM节点，接下来判断是否可复用
+
+    // 首先比较key是否相同
+    if (child.key === key) {
+      // key相同，接下来比较type是否相同
+
+      switch (child.tag) {
+        // ...省略case
+
+        default: {
+          if (child.elementType === element.type) {
+            // type相同则表示可以复用
+            // 返回复用的fiber
+            return existing;
+          }
+
+          // type不同则跳出switch
+          break;
+        }
+      }
+      // 代码执行到这里代表：key相同但是type不同
+      // 将该fiber及其兄弟fiber标记为删除
+      deleteRemainingChildren(returnFiber, child);
+      break;
+    } else {
+      // key不同，将该fiber标记为删除
+      deleteChild(returnFiber, child);
+    }
+    child = child.sibling;
+  }
+
+  // 创建新Fiber，并返回 ...省略
+}
+```
+
+##### 考虑如下例子：
+
+当前页面有 3 个 li，我们要全部删除，再插入一个 p。
+
+```javascript
+// 当前页面显示的
+ul > li * 3;
+
+// 这次需要更新的
+ul > p;
+```
+
+由于本次更新时只有一个 p，属于单一节点的 Diff，会走上面介绍的代码逻辑。
+
+在 reconcileSingleElement 中遍历之前的 3 个 fiber（对应的 DOM 为 3 个 li），寻找本次更新的 p 是否可以复用之前的 3 个 fiber 中某个的 DOM。
+
+当 key 相同且 type 不同时，代表我们已经找到本次更新的 p 对应的上次的 fiber，但是 p 与 li type 不同，不能复用。既然唯一的可能性已经不能复用，则剩下的 fiber 都没有机会了，所以都需要标记删除。
+
+当 key 不同时只代表遍历到的该 fiber 不能被 p 复用，后面还有兄弟 fiber 还没有遍历到。所以仅仅标记该 fiber 删除。
+
+#### 多节点 diff
+
+对于 `isArray(newChild)` newChild 为多节点时，会调用 reconcileChildrenArray 进行处理，我们先看以下几种节点更新的情况：
+
+```javascript
+// 之前
+<ul>
+  <li key="0">0<li>
+  <li key="1">1<li>
+</ul>
+
+// 之后 情况1 —— 节点更新
+<ul>
+  <li key="0" className="after">0<li>
+  <li key="1">1<li>
+</ul>
+
+<ul>
+  <div key="0">0</div>
+  <li key="1">1<li>
+</ul>
+
+// 之后 情况2 —— 新增或减少节点
+<ul>
+  <li key="0">0<li>
+  <li key="1">1<li>
+  <li key="2">2<li>
+</ul>
+
+<ul>
+  <li key="1">1<li>
+</ul>
+
+// 之后 情况3 —— 节点位置变化
+<ul>
+  <li key="1">1<li>
+  <li key="0">0<li>
+</ul>
+```
+
+Diff 算法的工作内容就是处理以上几种情况了：
+**1.** 判断当前节点的更新属于哪种情况
+**2.** 如果是新增，执行新增逻辑
+**3.** 如果是删除，执行删除逻辑
+**4.** 如果是更新，执行更新逻辑
+
+在日常开发中，相较于新增和删除，更新组件发生的频率更高。所以 Diff 会优先判断当前节点是否属于更新，整体逻辑会经历两轮遍历：
+
+- [第一轮遍历](https://github.com/facebook/react/blob/1fb18e22ae66fdb1dc127347e169e73948778e5a/packages/react-reconciler/src/ReactChildFiber.new.js#L818)：处理更新的节点。
+
+- [第二轮遍历](https://github.com/facebook/react/blob/1fb18e22ae66fdb1dc127347e169e73948778e5a/packages/react-reconciler/src/ReactChildFiber.new.js#L893)：处理剩下的不属于更新的节点。
+
+##### 第一轮遍历
+
+**1.** `let i = 0`，遍历 `newChildren`，将 `newChildren[i]`与 `oldFiber` 比较，判断 DOM 节点是否可复用。
+
+**2.** 如果可复用，`i++`，继续比较 `newChildren[i]`与 `oldFiber.sibling`，可以复用则继续遍历。
+
+**3.** 如果不可复用，分两种情况：
+
+- `key` 不同导致不可复用，立即跳出整个遍历，第一轮遍历结束。
+
+- `key` 相同 `type` 不同导致不可复用，会将 `oldFiber` 标记为 DELETION，并继续遍历
+
+**4.** 如果 `newChildren` 遍历完（即 `i === newChildren.length - 1`）或者 `oldFiber` 遍历完（即 `oldFiber.sibling === null`），跳出遍历，第一轮遍历结束。
+
+然后带着第一轮遍历的结果，开始第二轮遍历。
+
+##### 第二轮遍历
+
+**_newChildren 与 oldFiber 同时遍历完_**
+那就是最理想的情况：只需在第一轮遍历进行组件更新 (opens new window)。此时 Diff 结束。
+
+**_newChildren 没遍历完，oldFiber 遍历完_**
+已有的 DOM 节点都复用了，这时还有新加入的节点，意味着本次更新有新节点插入，我们只需要遍历剩下的 newChildren 为生成的 workInProgress fiber 依次标记 Placement。
+
+**_newChildren 遍历完，oldFiber 没遍历完_**
+意味着本次更新比之前的节点数量少，有节点被删除了。所以需要遍历剩下的 oldFiber，依次标记 Deletion。
+
+**_newChildren 与 oldFiber 都没遍历完_**
+这意味着有节点在这次更新中改变了位置。这是 Diff 算法最精髓也是最难懂的部分。我们接下来重点讲解**如何标记节点是否移动**：
+
+既然我们的目标是寻找移动的节点，那么我们需要明确：节点是否移动是以什么为参照物？
+
+我们的参照物是：最后一个可复用的节点在 `oldFiber` 中的位置索引（用变量 `lastPlacedIndex` 表示）。
+
+由于本次更新中节点是按 `newChildren` 的顺序排列。在遍历 `newChildren` 过程中，每个遍历到的可复用节点一定是当前遍历到的所有可复用节点中最靠右的那个，即一定在 `lastPlacedIndex` 对应的可复用的节点在本次更新中位置的后面。
+
+那么我们只需要比较遍历到的可复用节点在上次更新时是否也在 `lastPlacedIndex` 对应的 `oldFiber` 后面，就能知道两次更新中这两个节点的相对位置改变没有。
+
+我们用变量 `oldIndex` 表示遍历到的可复用节点在 `oldFiber` 中的位置索引。如果 `oldIndex < lastPlacedIndex`，代表本次更新该节点需要向右移动。
+
+`lastPlacedIndex` 初始为 `0`，每遍历一个可复用的节点，如果` oldIndex >= lastPlacedIndex`，则 `lastPlacedIndex = oldIndex`。
+
+单纯文字表达比较晦涩，这里提供一个 Demo，可以对照着理解，demo 中我们简化下书写，每个字母代表一个节点，字母的值代表节点的 `key`。
+
+```javascript
+// 之前
+abcd
+
+// 之后
+acdb
+
+===第一轮遍历开始===
+a（之后）vs a（之前）
+key不变，可复用
+此时 a 对应的oldFiber（之前的a）在之前的数组（abcd）中索引为0
+所以 lastPlacedIndex = 0;
+
+继续第一轮遍历...
+
+c（之后）vs b（之前）
+key改变，不能复用，跳出第一轮遍历
+此时 lastPlacedIndex === 0;
+===第一轮遍历结束===
+
+===第二轮遍历开始===
+newChildren === cdb，没用完，不需要执行删除旧节点
+oldFiber === bcd，没用完，不需要执行插入新节点
+
+将剩余oldFiber（bcd）保存为map
+
+// 当前oldFiber：bcd
+// 当前newChildren：cdb
+
+继续遍历剩余newChildren
+
+key === c 在 oldFiber中存在
+const oldIndex = c（之前）.index;
+此时 oldIndex === 2;  // 之前节点为 abcd，所以c.index === 2
+比较 oldIndex 与 lastPlacedIndex;
+
+如果 oldIndex >= lastPlacedIndex 代表该可复用节点不需要移动
+并将 lastPlacedIndex = oldIndex;
+如果 oldIndex < lastplacedIndex 该可复用节点之前插入的位置索引小于这次更新需要插入的位置索引，代表该节点需要向右移动
+
+在例子中，oldIndex 2 > lastPlacedIndex 0，
+则 lastPlacedIndex = 2;
+c节点位置不变
+
+继续遍历剩余newChildren
+
+// 当前oldFiber：bd
+// 当前newChildren：db
+
+key === d 在 oldFiber中存在
+const oldIndex = d（之前）.index;
+oldIndex 3 > lastPlacedIndex 2 // 之前节点为 abcd，所以d.index === 3
+则 lastPlacedIndex = 3;
+d节点位置不变
+
+继续遍历剩余newChildren
+
+// 当前oldFiber：b
+// 当前newChildren：b
+
+key === b 在 oldFiber中存在
+const oldIndex = b（之前）.index;
+oldIndex 1 < lastPlacedIndex 3 // 之前节点为 abcd，所以b.index === 1
+则 b节点需要向右移动
+===第二轮遍历结束===
+
+最终acd 3个节点都没有移动，b节点被标记为移动
+```
+
 ### React v15 和 v16 比较
 
 #### React15 架构可以分为两层：
@@ -369,7 +656,7 @@ function workLoopConcurrent() {
 
 **Renderer（渲染器）**：Renderer 根据 Reconciler 为虚拟 DOM 打的标记，同步执行对应的 DOM 操作。
 
-### React Fiber 的设计理念
+### React Fiber 的设计理念:checkered_flag:
 
 可以把 `React Fiber` 理解为 React 内部实现的一套状态更新机制。支持任务的不同优先级，可中断和恢复，并且能在恢复后可以调用之前的中间状态。
 
