fix: 内容排版修复

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -482,9 +482,13 @@ ul > p;
 ```
 
 Diff 算法的工作内容就是处理以上几种情况了：
+
 **1.** 判断当前节点的更新属于哪种情况
+
 **2.** 如果是新增，执行新增逻辑
+
 **3.** 如果是删除，执行删除逻辑
+
 **4.** 如果是更新，执行更新逻辑
 
 在日常开发中，相较于新增和删除，更新组件发生的频率更高。所以 Diff 会优先判断当前节点是否属于更新，整体逻辑会经历两轮遍历：
@@ -512,15 +516,19 @@ Diff 算法的工作内容就是处理以上几种情况了：
 ##### 第二轮遍历
 
 **_newChildren 与 oldFiber 同时遍历完_**
+
 那就是最理想的情况：只需在第一轮遍历进行组件更新 (opens new window)。此时 Diff 结束。
 
 **_newChildren 没遍历完，oldFiber 遍历完_**
+
 已有的 DOM 节点都复用了，这时还有新加入的节点，意味着本次更新有新节点插入，我们只需要遍历剩下的 newChildren 为生成的 workInProgress fiber 依次标记 Placement。
 
 **_newChildren 遍历完，oldFiber 没遍历完_**
+
 意味着本次更新比之前的节点数量少，有节点被删除了。所以需要遍历剩下的 oldFiber，依次标记 Deletion。
 
 **_newChildren 与 oldFiber 都没遍历完_**
+
 这意味着有节点在这次更新中改变了位置。这是 Diff 算法最精髓也是最难懂的部分。我们接下来重点讲解**如何标记节点是否移动**：
 
 既然我们的目标是寻找移动的节点，那么我们需要明确：节点是否移动是以什么为参照物？
@@ -663,10 +671,12 @@ let nextUnitOfWork = null;
 function performUnitOfWork(workInProgress) {
   // step1 执行任务
   const { type } = workInProgress;
-  if (typeof type == "string") {
-    // 原生标签节点
-    workInProgress.stateNode = creatNode(workInProgress);
-    // ...
+  if (typeof type === "function") {
+    type.prototype.isReactComponent
+      ? updateClassComponent(fiber)
+      : updateFunctionComponent(fiber);
+  } else {
+    updateHostComponent(fiber);
   }
 
   // step2 返回下一个执行任务
