refactor: 一些错误修改和整理

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -34,7 +34,8 @@ function deepClone(obj, hash = new WeakMap()) {
   hash.set(obj, newObj); // hash 解决循环引用问题
 
   for (let key in obj) {
-    newObj[key] = typeof obj[key] === "object" ? deepClone(obj[key]) : obj[key];
+    newObj[key] =
+      typeof obj[key] === "object" ? deepClone(obj[key], hash) : obj[key];
   }
   return newObj;
 }
