--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -178,18 +178,18 @@ console.log("myNewFun:", myNewFun);
 
 ```javascript
 const myInstanceof = function (left, right) {
-  right = [undefined, null].includes(left) ? Object : right.prototype;
-  left = [undefined, null].includes(right) ? Object : right.__proto__;
-  // 在 left 的原型链中层层查找，是否有原型等于 prototype
+  // 首先获取类型的原型
+  const prototype = right.prototype;
+  // 然后获得对象的原型
+  left = left.__proto__;
+  // 然后一直循环判断对象的原型是否等于类型的原型，直到对象原型为 null，因为原型链最终为 null
   while (true) {
-    // 确定边界条件，如果 left === null，即找到头没找到返回 false，right === left，即找到返回 true
-    if (left === null) {
+    if (left === null || left === undefined) {
       return false;
     }
-    if (right === left) {
+    if (left === prototype) {
       return true;
     }
-    // 不停的向上查找
     left = left.__proto__;
   }
 };
@@ -607,6 +607,56 @@ var level_order = function (root) {
 ```
 
 #### 手写 Promise 及相关
+
+```javascript
+// 我们先来构建一个超级简单的 Promise 结构
+class MyPromise {
+  constructor(executor) {
+    this.value = null;
+
+    const resolve = (value) => {
+      this.value = value;
+    };
+
+    const reject = (err) => {
+      this.err = err;
+    };
+
+    // 如果executor执行报错，直接执行reject
+    try {
+      executor(resolve, reject);
+    } catch (err) {
+      reject(err);
+    }
+  }
+
+  then(success) {
+    const result = success(this.value);
+    const mp = new MyPromise();
+    mp.value = result;
+    return mp;
+  }
+}
+
+// 构建一个 MyPromise 对象
+const promise = new MyPromise((resolve, reject) => {
+  resolve(10);
+});
+
+// 链式调用求值
+promise
+  .then((r) => {
+    console.log("mp1 r => ", r); // 结果: 10
+    return r + 3;
+  })
+  .then((r) => {
+    console.log("mp2 r => ", r); // 结果: 13
+    return r + 5;
+  })
+  .then((r) => {
+    console.log("mp3 r => ", r); // 结果: 18
+  });
+```
 
 `Promise` 应用解析：[原文](https://juejin.cn/post/6844903625769091079#heading-0)
 
