refactor: 优化promise.all/race写法

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -897,26 +897,27 @@ Promise.race([p1, p3, p2])
 ```javascript
 Promise._all = (list) =>
   new Promise((resolve, reject) => {
-    let resP = [];
+    const data = [];
     let count = 0;
-    list.forEach((index, pro) => {
-      resolve(pro).then(
-        (res) => {
+    list.forEach((index, item) => {
+      item
+        .then((res) => {
           count++;
-          resP[index] = res;
-          if (count === list.length) resove(resP);
-        },
-        (err) => {
+          data[index] = res;
+          if (count == list.length) resolve(data);
+        })
+        .catch((err) => {
           reject(err);
-        }
-      );
+        });
     });
   });
-Promise._race = list = new Promise((resolve, reject) => {
-  list.forEach((pro) => {
-    pro.then(resove, reject);
+
+Promise._race = (list) =>
+  new Promise((resolve, reject) => {
+    list.forEach((item) => {
+      item.then(((res) => resolve(res)).catch((err) => reject(err)));
+    });
   });
-});
 ```
 
 #### JS 异步解决方案的发展历程以及优缺点
