fix: 增加闭包的定义

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -64,6 +64,11 @@
 - 如果在 `mounted`、`created` 钩子中使用了第三方库初始化，对应的销毁。
 - 使用弱引用 `weakMap`、`weakSet`。
 
+#### 闭包的定义
+
+通俗解释：当一个内部函数被调用,就会形成闭包,闭包就是能够读取其他函数内部变量的函数
+词法分析：当前函数和它周围环境（词法环境）的引用被绑定到一起。
+
 #### 闭包会不会导致内存泄露
 
 > 闭包会导致内存泄露吗？正确的答案是 **不会**。
