--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -211,6 +211,97 @@ var permute = function (nums) {
 permute([1, 2, 3]);
 ```
 
+### [二叉树中、前、后遍历](#)
+
+![](./../resource/advanced_binaryTree.png)
+
+#### 解法一： 递归
+
+```javascript
+// 该方法表示前序遍历，中、后序遍历调整 mid/left/right 位置即可
+var traversal = function (root) {
+  const res = [];
+  const helper = (node) => {
+    if (!node) return;
+    res.push(node.val); // mid
+    helper(node.left); // left
+    helper(node.right); // right
+  };
+
+  helper(root);
+
+  return res;
+};
+```
+
+#### 解法二： 非递归 + 颜色标记法
+
+```javascript
+// 该方法表示前序遍历，中、后序遍历调整相应位置即可
+var traversal = function (root) {
+  const [WHITE, GRAY] = [0, 1]; // WHITE - 未访问的新结点； GRAY - 已访问的结点
+  const res = [];
+  const stack = [[WHITE, root]];
+  let color, node;
+  while (stack.length) {
+    [color, node] = stack.pop(); // 若栈中有元素，则按照左节点、根节点、右节点的顺序依次弹出元素
+    if (!node) continue;
+    if (color === WHITE) {
+      // 当前指向的结点是未访问过的结点，将其右节点，根节点，左节点依次入栈
+      stack.push([WHITE, node.right]);
+      stack.push([GRAY, node]);
+      stack.push([WHITE, node.left]);
+    } else res.push(node.val);
+  }
+  return res;
+};
+```
+
+### [105. 从前序与中序遍历序列构造二叉树](https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
+
+```javascript
+var buildTree = function (preorder, inorder) {
+  if (preorder.length === 0) return null; // 在数组长度为0时结束递归
+  const root = new TreeNode(preorder[0]); // 前序遍历第一个元素为根节点
+  const mid = inorder.indexOf(preorder[0]); // 获取根节点中序遍历中的索引
+  // 根据索引来切割数组 对子数数组继续递归
+  root.left = buildTree(preorder.slice(1, mid + 1), inorder.slice(0, mid));
+  root.right = buildTree(preorder.slice(mid + 1), inorder.slice(mid + 1));
+  return root;
+};
+```
+
+### [106. 从中序与后序遍历序列构造二叉树](https://leetcode-cn.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)
+
+```javascript
+var buildTree = function (inorder, postorder) {
+  if (!inorder.length) return null; // 在数组长度为0时结束递归
+  const n = postorder.length;
+  const root = new TreeNode(postorder[n - 1]); // 中序遍历最后一个元素为根节点
+  const mid = inorder.indexOf(postorder[n - 1]); // 获取根节点后序遍历中的索引
+  // 根据索引来切割数组 对子数数组继续递归
+  root.left = buildTree(inorder.slice(0, mid), postorder.slice(0, mid));
+  root.right = buildTree(inorder.slice(mid + 1), postorder.slice(mid, n - 1));
+  return root;
+};
+```
+
+### [236. 二叉树的最近公共祖先](https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+
+```javascript
+var lowestCommonAncestor = function (root, p, q) {
+  if (!root) return null;
+  if (root == p || root == q) return root;
+
+  const left = lowestCommonAncestor(root.left, p, q);
+  const right = lowestCommonAncestor(root.right, p, q);
+
+  if (!left) return right;
+  if (!right) return left;
+  if (left && right) return root;
+};
+```
+
 ### [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
 
 ```javascript
