refactor: 文档的一些优化

--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -10,6 +10,14 @@
 
 在程序设计中有很多使用的设计模式，而其中大部分语言的实现都是基于 『 类 』
 
+### 三种类型
+
+##### 创建型模式
+
+##### 结构型模式
+
+##### 行为型模式
+
 ### 设计原则
 
 ##### 一、单一设计原则
@@ -51,7 +59,7 @@
 function getSingleton(fn) {
   var instance = null;
 
-  return function() {
+  return function () {
     if (!instance) {
       instance = fn.apply(this, arguments);
     }
@@ -65,11 +73,11 @@ function SetManager(manager) {
   this.manager = manager;
 }
 
-SetManager.prototype.getManager = function() {
+SetManager.prototype.getManager = function () {
   console.log(this.manager);
 };
 
-var SingletonSetManager = getSingleton(function(manager) {
+var SingletonSetManager = getSingleton(function (manager) {
   var manager = new SetManager(manager);
   return manager;
 });
@@ -83,11 +91,11 @@ function SetHr(hr) {
   this.hr = hr;
 }
 
-SetHr.prototype.getHr = function() {
+SetHr.prototype.getHr = function () {
   console.log(this.hr);
 };
 
-var SingletonSetHr = getSingleton(function(hr) {
+var SingletonSetHr = getSingleton(function (hr) {
   var hr = new SetHr(hr);
   return hr;
 });
@@ -133,19 +141,19 @@ var levelMap = {
 var scoreLevelStratege = {
   basicScore: 80,
 
-  S: function() {
+  S: function () {
     return this.basicScore + levelMap["S"];
   },
 
-  A: function() {
+  A: function () {
     return this.basicScore + levelMap["A"];
   },
 
-  B: function() {
+  B: function () {
     return this.basicScore + levelMap["B"];
   },
 
-  C: function() {
+  C: function () {
     return this.basicScore + levelMap["C"];
   }
 };
@@ -155,7 +163,13 @@ function getScore(level) {
   return scoreLevelStratege[level] ? scoreLevelStratege[level]() : 0;
 }
 
-console.log(getScore("S"), getScore("A"), getScore("B"), getScore("C"), getScore("D")); // 90 88 86 84 0
+console.log(
+  getScore("S"),
+  getScore("A"),
+  getScore("B"),
+  getScore("C"),
+  getScore("D")
+); // 90 88 86 84 0
 ```
 
 在组合业务规则方面，比较经典的是表单的验证方法。这里列出比较关键的部分
@@ -171,17 +185,17 @@ var errorMsgs = {
 
 // 规则集
 var rules = {
-  minLength: function(value, length, errorMsg) {
+  minLength: function (value, length, errorMsg) {
     if (value.length < length) {
       return errorMsg || errorMsgs["minLength"];
     }
   },
-  isNumber: function(value, errorMsg) {
+  isNumber: function (value, errorMsg) {
     if (!/\d+/.test(value)) {
       return errorMsg || errorMsgs["isNumber"];
     }
   },
-  required: function(value, errorMsg) {
+  required: function (value, errorMsg) {
     if (value === "") {
       return errorMsg || errorMsgs["required"];
     }
@@ -197,7 +211,7 @@ Validator.prototype = {
   constructor: Validator,
 
   // 添加校验规则
-  add: function(value, rule, errorMsg) {
+  add: function (value, rule, errorMsg) {
     var arg = [value];
 
     if (rule.indexOf("minLength") !== -1) {
@@ -208,14 +222,14 @@ Validator.prototype = {
 
     arg.push(errorMsg);
 
-    this.items.push(function() {
+    this.items.push(function () {
       // 进行校验
       return rules[rule].apply(this, arg);
     });
   },
 
   // 开始校验
-  start: function() {
+  start: function () {
     for (var i = 0; i < this.items.length; ++i) {
       var ret = this.items[i]();
 
@@ -300,7 +314,7 @@ function debounce(fn, delay) {
 
   var timer = null;
 
-  return function() {
+  return function () {
     var arg = arguments;
 
     // 每次操作时，清除上次的定时器
@@ -308,7 +322,7 @@ function debounce(fn, delay) {
     timer = null;
 
     // 定义新的定时器，一段时间后进行操作
-    timer = setTimeout(function() {
+    timer = setTimeout(function () {
       fn.apply(this, arg);
     }, delay);
   };
@@ -322,7 +336,7 @@ function scrollHandle(e) {
 }
 
 // 代理
-var proxyScrollHandle = (function() {
+var proxyScrollHandle = (function () {
   return debounce(scrollHandle, 500);
 })();
 
@@ -338,16 +352,16 @@ window.onscroll = proxyScrollHandle;
 function add() {
   var arg = [].slice.call(arguments);
 
-  return arg.reduce(function(a, b) {
+  return arg.reduce(function (a, b) {
     return a + b;
   });
 }
 
 // 代理
-var proxyAdd = (function() {
+var proxyAdd = (function () {
   var cache = [];
 
-  return function() {
+  return function () {
     var arg = [].slice.call(arguments).join(",");
 
     // 如果有，则直接从缓存返回
