--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -239,11 +239,7 @@ function add() {
 
 ```javascript
 function compose(...funcs) {
-  return function (x) {
-    return funcs.reduce(function (arg, fn) {
-      return fn(arg);
-    }, x);
-  };
+  return (value) => funcs.reduce((prev, next) => next(prev), value);
 }
 
 function lowerCase(value) {
