--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -21,13 +21,11 @@
 
 #### HTTP 缓存机制
 
-##### 强制缓存
+1. 浏览器发送请求前，根据请求头的`expries`和`cache-control`判断是否命中强缓存策略。如果命中，直接从缓存中获取资源，并不会发送请求。如果没有命中，则进行下一步。
+2. 没有命中强缓存规则，浏览器会发送请求，根据请求头的`last-modified`和`etag`判断是否命中协商缓存。如果命中，直接从缓存中获取资源。如果没有命中，则进行下一步。
+3. 如果前两步都没有命中，直接从服务端获取资源。
 
-> 服务器通知浏览器一个缓存时间，在缓存时间内，下次请求直接使用缓存，不在就执行比较缓存策略。
-
-##### 比较缓存
-
-> 将缓存信息中的 Etag 和 Last-Modified 通过请求发给服务器，由服务器校验，返回 304 状态码时候，浏览器直接启用缓存
+  <img src="./../resource/chatAbout_httpCache.png" />
 
 #### HTTP 常见状态码
 
