feat: 增加 Vue 父子组件生命周期执行顺序

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -43,6 +43,24 @@ new Vue{(
 )}
 ```
 
+### Vue 父子组件生命周期执行顺序
+
+#### 加载渲染过程
+
+> 父 beforeCreate -> 父 created -> 父 beforeMount -> 子 beforeCreate -> 子 created -> 子 beforeMount -> 子 mounted -> 父 mounted
+
+#### 子组件更新过程
+
+> 父 beforeUpdate -> 子 beforeUpdate -> 子 updated -> 父 updated
+
+#### 父组件更新过程
+
+> 父 beforeUpdate -> 父 updated
+
+#### 父组件更新过程
+
+> 父 beforeDestroy -> 子 beforeDestroy -> 子 destroyed -> 父 destroyed
+
 ### Vue/React 组件间通信
 
 #### VUE
