--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -334,3 +334,101 @@ var canJump = function (nums) {
   return true;
 };
 ```
+
+### [206. 反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
+
+```javascript
+var reverseList = function (head) {
+  if (!head) return head;
+  let prev = new ListNode(null);
+  prev.next = head;
+
+  while (head.next) {
+    const nextNode = head.next;
+    head.next = nextNode.next;
+    nextNode.next = prev.next;
+    prev.next = nextNode;
+  }
+
+  return prev.next;
+};
+```
+
+### [92. 反转链表 II](https://leetcode-cn.com/problems/reverse-linked-list-ii/)
+
+```javascript
+// head = [1,2,3,4,5], left = 2, right = 4
+var reverseBetween = function (head, left, right) {
+  const start = new ListNode(null);
+  let prev = start;
+  for (let i = 1; i < left; i++) {
+    prev = prev.next;
+  }
+  head = prev.next;
+  for (let i = left; i < right; i++) {
+    const nextNode = head.next;
+    head.next = nextNode.next;
+    nextNode.next = prev.next;
+    prev.next = nextNode;
+  }
+
+  return start.next;
+};
+```
+
+### [300. 最长递增子序列](https://leetcode-cn.com/problems/longest-increasing-subsequence/)
+
+#### 解法一： 动态规划
+
+```javascript
+// [10,9,2,5,3,7,101,18]
+var lengthOfLIS = function (nums) {
+  const { length } = nums;
+  if (length <= 1) return length;
+  const dp = new Array(length).fill(1);
+  for (let i = 0; i < length; i++) {
+    for (let j = 0; j < i; j++) {
+      if (nums[i] > nums[j]) dp[i] = Math.max(dp[i], dp[j] + 1);
+    }
+  }
+
+  return Math.max(...dp);
+};
+
+lengthOfLIS([10, 9, 2, 5, 3, 7, 101, 18]);
+```
+
+#### 解法二： 贪心 + 二分
+
+```javascript
+// [10,9,2,5,3,7,101,18]
+var lengthOfLIS = function (nums) {
+  const { length } = nums;
+  if (length <= 1) return length;
+  const res = [nums[0]];
+
+  for (let i = 0; i < length; i++) {
+    const current = nums[i];
+    let left = 0,
+      right = res.length - 1;
+    // 直接插入到后面
+    if (res[right] < current) {
+      res.push(current);
+    }
+    // 二分比较替换比当前值大的一边最小的那个值
+    else {
+      while (left < right) {
+        const mid = (left + right) >> 1;
+        if (current > res[mid]) left = mid + 1;
+        else right = mid;
+      }
+
+      res[left] = current;
+    }
+  }
+
+  return res.length;
+};
+
+lengthOfLIS([10, 9, 2, 5, 3, 7, 101, 18]);
+```
