--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -432,3 +432,27 @@ var lengthOfLIS = function (nums) {
 
 lengthOfLIS([10, 9, 2, 5, 3, 7, 101, 18]);
 ```
+
+### [72. 编辑距离](https://leetcode-cn.com/problems/edit-distance/)
+
+```javascript
+var minDistance = function (word1, word2) {
+  const m = word1.length;
+  const n = word2.length;
+  const arr = Array.from({ length: m + 1 }, () => new Array(n + 1));
+  for (let i = 0; i < m + 1; i++) arr[i][0] = i;
+
+  for (let j = 0; j < n + 1; j++) arr[0][j] = j;
+
+  for (let i = 1; i < m + 1; i++) {
+    for (let j = 1; j < n + 1; j++) {
+      if (word1[i - 1] === word2[j - 1]) arr[i][j] = arr[i - 1][j - 1];
+      else
+        arr[i][j] =
+          Math.min(arr[i - 1][j], arr[i][j - 1], arr[i - 1][j - 1]) + 1;
+    }
+  }
+
+  return arr[m][n];
+};
+```
