refactor: 补充网络相关

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -263,5 +263,25 @@ plan-c. {
 
 ##### 回流 重绘
 
-- reflow（回流）：当浏览器发现某个部分发生了点变化影响了布局，需要倒回去重新渲染
-- repaint（重绘）：改变某个元素的背景色、文字颜色、边框颜色等等不影响它周围或内部布局时，屏幕需要一部分重画，但是元素尺寸没有改变
+- reflow（回流）：当浏览器发现某个部分发生了点变化影响了布局，需要倒回去重新渲染。这个过程也叫重排。
+- repaint（重绘）：改变某个元素的背景色、文字颜色、边框颜色等等不影响它周围或内部布局时，屏幕需要一部分重画，但是元素尺寸没有改变。
+
+#### DNS 解析过程
+
+当一个用户在地址栏输入http://www.taobao.com时，DNS解析过程大致如下：
+
+1. 浏览器首先检查缓存中有没有这个域名对应的 ip 地址
+2. 如果浏览器缓存中没有找到，会在操作系统中检查有没有缓存（检查 hosts 文件中是否设置）
+3. 如果还没有命中域名，才会向根域名服务器进行迭代查询获取 DNS IP 地址
+4. 本地域名服务器把返回的结果保存到缓存，以备下一次使用
+5. 将该结果反馈给浏览器，发起 TCP 连接
+
+#### 对比 TCP 和 UDP
+
+| 参数     | TCP（类似打电话）                        | UDP（类似喇叭喊人）                        |
+| -------- | ---------------------------------------- | ------------------------------------------ |
+| 特点     | 面向连接（收发数据前，必须建立可靠连接） | 面向无连接（不可靠的协议，无状态传输机制） |
+| 建立基础 | 三次握手                                 | 无连接                                     |
+| 应用场景 | HTTP 请求、FTP 文件传输、邮件收发        | 消息收发、语音通话、直播                   |
+| 优点     | 稳定、重传机制、拥塞控制机制、断开连接   | 速度块、安全                               |
+| 缺点     | 速度慢、效率低、占用资源、易被攻击       | 不可靠、不稳定、容易丢包                   |
