--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -456,3 +456,9 @@ var minDistance = function (word1, word2) {
   return arr[m][n];
 };
 ```
+
+## 套路总结
+
+- 对于「找最近一个比当前值大/小」的问题，都可以使用单调栈来解决。
+- 对于「子序列和最值」，那几乎可以肯定，考察的是动态规划技巧，时间复杂度一般都是 O(n^2)。
+- 对于「回文子序列」，可以考虑中心扩展法来处理。
