feat: 增加手写单例模式

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -102,6 +102,26 @@ Array.prototype.flat = function () {
 // [2, 2, 3, 2, 3, 4]
 ```
 
+#### 手写单例模式
+
+```javascript
+const getSingleton = function (fn) {
+  let instance;
+  return function () {
+    if (instance) return instance;
+    return (instance = new (fn.bind(this, ...arguments))());
+  };
+};
+// 用法
+function Person(name) {
+  this.name = name;
+}
+let singleton = getSingleton(Person);
+let instance1 = new singleton("Twittop1");
+let instance2 = new singleton("Twittop2");
+console.log(instance1 === instance2); // true
+```
+
 #### import 最后被解析成了什么
 
 ##### import 经过 `webpack` 编译打包后最终变成了什么？
