--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -57,7 +57,7 @@ new Vue{(
 
 > 父 beforeUpdate -> 父 updated
 
-#### 父组件更新过程
+#### 父组件销毁过程
 
 > 父 beforeDestroy -> 子 beforeDestroy -> 子 destroyed -> 父 destroyed
 
@@ -149,7 +149,7 @@ this.newDepIds = new Set();
 
 **收集过程**：当我们实例化一个渲染 `watcher` 的时候，首先进入 `watcher` 的构造函数逻辑，然后执行他的`this.get()`方法，进入 `get` 函数把 `Dep.target` 赋值为当前渲染 `watcher` 并压栈（为了恢复用）。接着执行`vm._render()`方法，生成渲染 `VNode`,并且在这个过程对 `vm` 上的数据访问，这个时候就触发数据对象的 `getter`（在此期间执行`Dep.target.addDep(this)`方法，将 `watcher` 订阅到这个数据持有的 `dep` 的 `subs` 中，为后续数据变化时通知到哪些 `subs` 做准备）。然后递归遍历添加所有子项的 `getter。`
 
-> `Watcher` 在构造函数中初始化两个 `Dep` `实例数组。newDeps` 代表新添加的 `Dep` 实例数组，`deps` 代表上一次添加的 `Dep` 实例数组。  
+> `Watcher` 在构造函数中初始化两个 `Dep` 实例数组。`newDeps` 代表新添加的 `Dep` 实例数组，`deps` 代表上一次添加的 `Dep` 实例数组。  
 > 依赖清空：在执行清空依赖（`cleanupDeps`）函数时，会首先遍历 `deps`,移除对 `dep` 的订阅，然后把 `newDepsIds` 和 `depIds` 交换，`newDeps` 和 `deps` 交换，并把 `newDepIds` 和 `newDeps` 清空。考虑场景，在条件渲染时，及时对不需要渲染数据的订阅移除，减少性能浪费。
 
 考虑到 Vue 是数据驱动的，所以每次数据变化都会重写 Render,那么`vm._render()`方法会再次执行，并再次触发数据。
