refactor：补充 Vue 响应式对象

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -125,11 +125,11 @@ Object.defineProperty(
 )
 ```
 
-> **observe** 的功能就是用来监测数据的变化。实现方式是给非 `VNode` 的对象类型数据添加一个 `Observer`,如果已经添加过则直接返回，否则在满足一定条件下去实例化一个 `Observer` 对象实例。
+> **observe** 这个方法的功能就是用来监测数据的变化。实现方式是给非 `VNode` 的对象类型数据添加 `Observer`对象实例,如果存在`__ob__`属性表示已经添加过则直接返回，否则在满足一定条件下去实例化一个 `Observer` 对象实例。
 
 Observer 是一个类,它的作用是给对象属性添加 『 getter 』和『 setter 』,用于 **依赖收集** 和 **派发更新**
 
----
+![](./../resource/interview_vueDep.png)
 
 **依赖收集 getter**（重点关注以下两点）
 
