feat: 算法题补充

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -455,6 +455,173 @@ var minDistance = function (word1, word2) {
 
   return arr[m][n];
 };
+
+minDistance("intention", "execution");
+```
+
+### [82. 删除排序链表中的重复元素 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii/)
+
+#### 解法一：暴力 + 缓存
+
+```javascript
+var deleteDuplicates = function (head) {
+  const map = new Map();
+  const prev = new ListNode(null, head);
+  while (head) {
+    const { val } = head;
+    const num = map.get(val);
+    if (num) map.set(val, num + 1);
+    else map.set(val, 1);
+    head = head.next;
+  }
+  let cur = prev;
+  while (cur.next) {
+    const { val } = cur.next;
+    if (map.get(val) > 1) cur.next = cur.next.next;
+    else cur = cur.next;
+  }
+
+  return prev.next;
+};
+```
+
+#### 解法二：迭代
+
+```javascript
+var deleteDuplicates = function (head) {
+  const start = new ListNode(null, head);
+  let prev = start;
+  while (prev.next && prev.next.next) {
+    if (prev.next.val == prev.next.next.val) {
+      const temp = prev.next.val;
+      while (prev.next && prev.next.val == temp) prev.next = prev.next.next;
+    } else {
+      prev = prev.next;
+    }
+  }
+};
+```
+
+#### 解法三：递归
+
+```javascript
+var deleteDuplicates = function (head) {
+  if (!head || !head.next) return head;
+  if (head.val === head.next.val) {
+    while (head.next && head.next.val === head.val) head.next = head.next.next;
+    return deleteDuplicates(head.next);
+  } else {
+    head.next = deleteDuplicates(head.next);
+  }
+
+  return head;
+};
+```
+
+### [131. 分割回文串](https://leetcode-cn.com/problems/palindrome-partitioning/)
+
+```javascript
+var partition = function (s) {
+  const n = s.length;
+  if (n == 0) return [];
+  const ans = [];
+  const dp = Array.from({ length: n }, () => Array(n).fill(0));
+  for (let i = n - 1; i >= 0; i--) {
+    for (let j = i; j < n; j++) {
+      dp[i][j] = s[i] === s[j] && (j - i < 2 || dp[i + 1][j - 1]);
+    }
+  }
+
+  const dfs = (path, start) => {
+    if (start == n) ans.push([...path]);
+    for (let i = start; i < n; i++) {
+      if (!dp[start][i]) continue;
+
+      path.push(s.substring(start, i + 1));
+      dfs(path, i + 1);
+      path.pop();
+    }
+  };
+
+  dfs([], 0);
+
+  return ans;
+};
+
+partition("aab");
+```
+
+### [516. 最长回文子序列](https://leetcode-cn.com/problems/longest-palindromic-subsequence/)
+
+```javascript
+var longestPalindromeSubseq = function (s) {
+  const { length } = s;
+  let dp = Array.from({ length }, () => new Array(length).fill(0));
+
+  // 倒着循环，保证 dp[i+1][j-1] 存在
+  for (let i = length - 1; i >= 0; i--) {
+    for (let j = i; j < length; j++) {
+      if (s[i] == s[j]) {
+        // length 为 1 或 2 的子序列
+        if (j - i < 2) dp[i][j] = j - i + 1;
+        else dp[i][j] = dp[i + 1][j - 1] + 2;
+      } else {
+        dp[i][j] = Math.max(dp[i + 1][j], dp[i][j - 1]);
+      }
+    }
+  }
+
+  return dp[0][length - 1];
+};
+longestPalindromeSubseq("bbbab");
+```
+
+### [51. N 皇后](https://leetcode-cn.com/problems/n-queens/)
+
+```javascript
+var solveNQueens = function (n) {
+  const grid = Array.from({ length: n }, () => new Array(n).fill("."));
+  const res = [];
+  const isMatch = (row, col) => {
+    for (let i = 0; i < row; i++) {
+      // 之前的行
+      for (let j = 0; j < n; j++) {
+        // 之前的行
+        // 发现了皇后，并且和自己同列/对角线
+        if (
+          grid[i][j] == "Q" &&
+          (j == col || i + j === row + col || i - j === row - col)
+        )
+          return false;
+      }
+    }
+
+    return true;
+  };
+
+  const helper = (row) => {
+    if (row == n) {
+      const target = grid.map((item) => item.join(""));
+
+      res.push(target);
+      return;
+    }
+
+    for (let col = 0; col < n; col++) {
+      if (isMatch(row, col)) {
+        grid[row][col] = "Q";
+        helper(row + 1);
+        grid[row][col] = ".";
+      }
+    }
+  };
+
+  helper(0); // 从第0行开始放置
+
+  return res;
+};
+
+solveNQueens(4);
 ```
 
 ## 套路总结
