fix: 书写问题修复

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -216,7 +216,7 @@ m.get(["a"]); // undefined。表面键相同但是内存地址不一样
 #### CSS 垂直水平居中
 
 ```css
-plan-a. {
+.plan-a {
   position: absolute;
   margin: auto;
   top: 0;
@@ -224,7 +224,7 @@ plan-a. {
   right: 0;
   bottom: 0;
 }
-plan-b. {
+.plan-b {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -232,7 +232,7 @@ plan-b. {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-plan-c. {
+.plan-c {
   display: flex;
   justify-content: center;
   align-items: center;
