refactor: 补充设计模式类型

--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -14,9 +14,58 @@
 
 ##### 创建型模式
 
+创建型设计模式关注于对象创建的机制方法，通过该方法,对象以适应工作环境的方式被创建。基本的对象创建方法可能会给项目增加额外的复杂性，而这些模式的目的就是为了通过控制创建过程解决这个问题。属于这一类的一些模式是：
+
+- 构造器模式（Constructor）
+- 工厂模式（Factory）
+- 抽象工厂模式（Abstract）
+- 原型模式（Prototype）
+- 单例模式（Singleton）
+- 建造者模式（Builder）
+
 ##### 结构型模式
 
+结构模式关注于对象组成和通常识别的方式实现不同对象之间的关系。该模式有助于在系统的某一部分发生改变的时候，整个系统结构不需要改变。该模式同样有助于对系统中某部分没有达到某一目的的部分进行重组。在该分类下的模式有：
+
+- 适配器模式（Adapter）
+- 外观模式（Facade）
+- 桥接模式（Bridge）
+- 装饰器模式（Decorator）
+- 代理模式（Proxy）
+- 享元模式（Flyweight）
+- 组合模式（Composite）
+
+又可分为：
+
+- 接口适配：适配器、外观、桥接模式
+- 行为扩展：装饰
+- 性能与对象访问：代理、享元模式
+- 抽象集合：组合模式
+
 ##### 行为型模式
+
+行为模式关注改善或精简在系统中不同对象间通信。行为模式包括：
+
+- 模板方法模式（Template Method）
+- 策略模式（Strategy）
+- 命令模式（Command）
+- 中介者模式（Mediator）
+- 观察者模式（Observer）
+- 迭代器模式（Iteratior）
+- 访问者模式（Visiter）
+- 责任链模式（Chain of Responsibility）
+- 备忘录模式（Memento）
+- 状态模式（State）
+- 解释器模式（Interpreter）
+
+又可分为：
+
+- 算法封装：模板方法、策略、命令模式
+- 对象去耦：中介、观察者模式
+- 抽象集合：迭代器模式
+- 行为扩展：访问者、责任链模式
+- 对象状态：状态模式
+- 解释器模式
 
 ### 设计原则
 
