fix: react 生命周期方法修正

--- a/interview/前端进阶-甲.md
+++ b/interview/前端进阶-甲.md
@@ -87,7 +87,7 @@ arr.reduce((result, item, index, arr) => {
 
 ##### 装载过程
 
-依次调用如下过程 `constructor` 、 `getInitialState` 、 `getDefaultProps` 、 `componentWillMont` 、 `render` 、 `componentDIdMount`
+依次调用如下过程 `constructor` 、 `getInitialState` 、 `getDefaultProps` 、 `componentWillMount` 、 `render` 、 `componentDIdMount`
 
 1. constructor
 
@@ -125,7 +125,7 @@ class Component {
 
 ##### 更新过程
 
-简单来说就是 props 和 state 被修改的过程，依次调用 `compWillReceiveProps`、 `shouldComponentUpdate`. `componentWillUpdate`、 `render`、 `componentDidUpdate`
+简单来说就是 props 和 state 被修改的过程，依次调用 `componentWillReceiveProps`、 `shouldComponentUpdate`、`componentWillUpdate`、 `render`、 `componentDidUpdate`
 
 1. componentWillReceiveProps（nextProps）
 
