fix: 手写 Promise 修正

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -725,7 +725,7 @@ class Promise {
   }
 
   // then 方法 有两个参数onFulfilled onRejected
-  then(onFuifilled, onRejected) {
+  then(onFulfilled, onRejected) {
     // onFulfilled如果不是函数，就忽略onFulfilled，直接返回value
     onFulfilled =
       typeof onFulfilled === "function" ? onFulfilled : (value) => value;
@@ -744,7 +744,7 @@ class Promise {
         // 异步
         setTimeout(() => {
           try {
-            const x = onFuilled(this.value);
+            const x = onFulfilled(this.value);
             // resolvePromise函数，处理自己return的promise和默认的promise2的关系
             this.resolvePromise(promise2, x, resolve, reject);
           } catch (e) {
@@ -774,7 +774,7 @@ class Promise {
           // 异步
           setTimeout(() => {
             try {
-              const x = onFuilled(this.value);
+              const x = onFulfilled(this.value);
               this.resolvePromise(promise2, x, resolve, reject);
             } catch (e) {
               reject(e);
