feat: 增加 手写异步中间件

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -122,6 +122,47 @@ let instance2 = new singleton("Twittop2");
 console.log(instance1 === instance2); // true
 ```
 
+#### 手写异步中间件
+
+```javascript
+async function middleware1(next) {
+  console.log("middleware1-1");
+  await next();
+  console.log("middleware1-2");
+}
+
+async function middleware2(next) {
+  console.log("middleware2-1");
+  await next();
+  console.log("middleware2-2");
+}
+
+function compose(funs) {
+  return (args) => {
+    const dispatch = (index) => {
+      const fn = funs[index] || args;
+      if (typeof fn !== "function") return Promise.resolve();
+      const next = () => dispatch(index + 1);
+
+      // 给执行函数添加返回成功的Promise.resolve
+      return Promise.resolve(fn(next));
+    };
+
+    dispatch(0);
+  };
+}
+
+compose([middleware1, middleware2])(() => console.log("dispatch"));
+
+/** 希望输出
+middleware1-1
+middleware2-1
+dispatch
+middleware2-2
+middleware1-2
+*/
+```
+
 #### import 最后被解析成了什么
 
 ##### import 经过 `webpack` 编译打包后最终变成了什么？
