--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -162,3 +162,71 @@ middleware2-2
 middleware1-2
 */
 ```
+
+#### 手写 redux
+
+##### 要实现的 redux 主要有如下几个功能：
+
+- 获取应用 state
+- 发送 action
+- 监听 state 变化
+
+```js
+// 以下是对 store 的定义
+const store = {
+  state: {}, // 全局唯一的state，内部变量，通过getState()获取
+  listeners: [], // listeners，用来诸如视图更新的操作
+  dispatch: () => {}, // 分发action
+  subscribe: () => {}, // 用来订阅state变化
+  getState: () => {} // 获取state
+};
+```
+
+我们来实现 createStore，它返回 store 对象， store 的对象结构上面已经写好了。createStore 是用来初始化 redux store 的，是 redux 最重要的 api。 我们来实现一下：
+
+```js
+const createStore = (reducer, initialState) => {
+  // internal variables
+  const store = {};
+  store.state = initialState;
+  store.listeners = [];
+
+  // api-subscribe
+  store.subscribe = (listener) => {
+    store.listeners.push(listener);
+  };
+
+  // api-dispatch
+  store.dispatch = (action) => {
+    store.state = reducer(store.state, action);
+    store.listeners.forEach((listener) => listener());
+  };
+
+  // aip-getState
+  store.getState = () => store.state;
+
+  return store;
+};
+
+/** 我们来实验一下 */
+function counter(state = 0, action) {
+  switch (action.type) {
+    case "INCREMENT":
+      return state + 1;
+    case "DECREMENT":
+      return state - 1;
+    default:
+      return state;
+  }
+}
+
+let store = createStore(counter);
+
+store.subscribe(() => {
+  console.log(store.getState());
+});
+
+store.dispatch({ type: "INCREMENT" }); // 1
+store.dispatch({ type: "DECREMENT" }); // 0
+store.dispatch({ type: "INCREMENT" }); // 1
+```
