refactor: 增加算法-最长有效括号注释

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -54,7 +54,7 @@ var longestPalindrome = function (s) {
         else if (dp[i + 1][j - 1]) dp[i][j] = true;
       }
 
-      if (dp[i][j] && j - i + 1 > res.length) res = s.substring(i, j + 1);
+      if (dp[i][j] && j - i + 1 > res.length) res = s.slice(i, j + 1);
     }
   }
 
@@ -69,14 +69,16 @@ longestPalindrome("babad");
 ```javascript
 // ")()())"
 var longestValidParentheses = function (s) {
-  const stack = [-1];
+  const stack = [-1]; // 初始化参照
   let max = 0;
   for (let i = 0; i < s.length; i++) {
     if (s[i] == "(") stack.push(i);
+    // 左括号入栈
     else {
-      stack.pop();
+      stack.pop(); // 遍历到右括号，出栈
       if (stack.length) max = Math.max(max, i - stack[stack.length - 1]);
-      else stack.push(i);
+      // 栈未空，计算有效长度
+      else stack.push(i); // 入栈作为参照
     }
   }
 
