refactor: 更新算法-组合总和

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -94,21 +94,16 @@ longestValidParentheses(")()())");
 // [2,3,6,7]  7
 var combinationSum = function (candidates, target) {
   const ans = [];
-  const dfs = (target, path, index) => {
-    if (index === candidates.length) return;
-    if (target === 0) {
-      ans.push(path);
-      return;
-    }
-    // 直接跳过
-    dfs(target, path, index + 1);
-    // 选择当前数
-    if (target - candidates[index] >= 0) {
-      dfs(target - candidates[index], [...path, candidates[index]], index);
-    }
+  const dfs = (rest, path, index) => {
+    if (index >= candidates.length || rest < 0) return;
+    if (rest === 0) return ans.push(path);
+
+    dfs(rest, path, index + 1); // 直接跳过
+    dfs(rest - candidates[index], path.concat(candidates[index]), index); // 选择当前数
   };
 
   dfs(target, [], 0);
+
   return ans;
 };
 
