--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -208,6 +208,44 @@ var permute = function (nums) {
 permute([1, 2, 3]);
 ```
 
+### [54. 螺旋矩阵](https://leetcode-cn.com/problems/spiral-matrix/)
+
+```javascript
+// [[1,2,3],[4,5,6],[7,8,9]]
+var spiralOrder = function (matrix) {
+  const m = matrix.length;
+  if (m == 0) return [];
+  const n = matrix[0].length;
+  let top = 0,
+    bottom = m - 1,
+    left = 0,
+    right = n - 1;
+  let res = [];
+
+  // 螺旋加
+  while (top <= bottom && left <= right) {
+    for (let i = left; i <= right; i++) res.push(matrix[top][i]);
+    top++;
+    for (let i = top; i <= bottom; i++) res.push(matrix[i][right]);
+    right--;
+    // 防止有一条边界叠加
+    if (top > bottom || left > right) break;
+    for (let i = right; i >= left; i--) res.push(matrix[bottom][i]);
+    bottom--;
+    for (let i = bottom; i >= top; i--) res.push(matrix[i][left]);
+    left++;
+  }
+
+  return res;
+};
+
+spiralOrder([
+  [1, 2, 3],
+  [4, 5, 6],
+  [7, 8, 9]
+]);
+```
+
 ### [二叉树中、前、后遍历](#)
 
 ![](./../resource/advanced_binaryTree.png)
