feat: 算法增加旋转图像

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -208,6 +208,36 @@ var permute = function (nums) {
 permute([1, 2, 3]);
 ```
 
+### [48. 旋转图像](https://leetcode-cn.com/problems/rotate-image/)
+
+```javascript
+// [[1,2,3],[4,5,6],[7,8,9]]
+var rotate = function (matrix) {
+  const n = matrix.length;
+  // 水平翻转
+  for (let i = 0; i < Math.floor(n / 2); i++) {
+    for (let j = 0; j < n; j++) {
+      [matrix[i][j], matrix[n - i - 1][j]] = [
+        matrix[n - i - 1][j],
+        matrix[i][j]
+      ];
+    }
+  }
+  // 主对角线翻转
+  for (let i = 0; i < n; i++) {
+    for (let j = 0; j < i; j++) {
+      [matrix[i][j], matrix[j][i]] = [matrix[j][i], matrix[i][j]];
+    }
+  }
+};
+
+rotate([
+  [1, 2, 3],
+  [4, 5, 6],
+  [7, 8, 9]
+]);
+```
+
 ### [54. 螺旋矩阵](https://leetcode-cn.com/problems/spiral-matrix/)
 
 ```javascript
