refactor: 更新算法跳跃游戏

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -391,11 +391,10 @@ maxSubArray([-2, 1, -3, 4, -1, 2, 1, -5, 4]);
 // [2,3,1,1,4]
 var canJump = function (nums) {
   let maxL = 0;
-  for (let i = 0; i < nums.length; i++) {
-    if (nums[i] == 0 && maxL <= i) return false;
-    maxL = Math.max(maxL, i + nums[i]);
+  for (let i = 0; i < nums.length - 1; i++) {
+    if (nums[i] === 0 && maxL <= i) return false; // 遇到0跳不过去了
+    maxL = Math.max(maxL, nums[i] + 1);
   }
-
   return true;
 };
 ```
